# servant-in-and-out

./: README.md  servant-in-and-out.cabal
app/: Main.hs
src/Servant/: InAndOut.hs
