name:                servant-in-and-out
version:             0.1.0.0
homepage:            https://github.com/plow-technologies/servant-in-and-out#readme
license:             BSD3
license-file:        LICENSE
author:              James M.C. Haver II
maintainer:          mchaver@gmail.com
copyright:           2017 Plow Technologies
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable servant-in-and-out
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , servant
                     , servant-server
                     , servant-in-and-out
                     , text
                     , wai
                     , warp
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/plow-technologies/servant-in-and-out
